Completed home cards

--- a/Styles/CSS/output.css
+++ b/Styles/CSS/output.css
@@ -103,7 +103,7 @@
   border-style: solid;
   border-color: #1DB954;
   border-radius: 7px;
-  margin: -297px 1160px 0;
+  margin: -297px 960px 0;
   width: 20%;
 }
 .home .home-body .body-navigation-container .about-card .about-card-body {
@@ -113,4 +113,4 @@
   text-align: center;
 }
 
-/*# sourceMappingURL=home.css.map */
+/*# sourceMappingURL=output.css.map */
