--- a/Styles/CSS/projects.css
+++ b/Styles/CSS/projects.css
@@ -16,7 +16,6 @@
 }
 .projects {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-  overflow: auto;
 }
 .projects header {
   background-color: #1DB954;
@@ -46,6 +45,71 @@
   font-size: 18px;
   padding: 0 10px;
   text-decoration: none;
+}
+@media only screen and (min-width: 600px) {
+  .projects {
+    width: 1650px;
+  }
+  .projects .projects-body-head {
+    padding: 40px 155px;
+  }
+  .projects .projects-body-head h1 {
+    font-size: 50px;
+  }
+  .projects .projects-body-head h1 i {
+    font-size: 38px;
+  }
+  .projects .projects-body-head h3 {
+    color: #696969;
+    line-height: 30px;
+    margin: -25px 0;
+  }
+  .projects .personal-website-container {
+    border-color: #1DB954;
+    border-style: solid;
+    background-color: #f7f7f7;
+    margin: 50px 200px;
+    padding-bottom: 107px;
+    padding-top: 5px;
+  }
+  .projects .personal-website-container img {
+    border-color: #000000;
+    border-style: solid;
+    display: inline;
+    float: right;
+    margin: -197px -3px;
+    object-fit: cover;
+  }
+  .projects .personal-website-container h3 {
+    text-align: center;
+    margin-right: 450px;
+    margin-top: -5px;
+  }
+  .projects .personal-website-container li {
+    list-style-type: none;
+  }
+  .projects .personal-website-container li h4 {
+    margin: 0 335px;
+  }
+}
+.projects footer {
+  background-color: #000000;
+  bottom: 0;
+  color: gray;
+  left: 0;
+  padding-top: -50px;
+  position: fixed;
+  text-align: center;
+  width: 100%;
+}
+.projects footer nav {
+  padding: 5px 0;
+}
+.projects footer nav a {
+  padding: 50px;
+}
+.projects footer h4 {
+  margin: 10px;
 }
 
 /*# sourceMappingURL=projects.css.map */
