--- a/Styles/SCSS/_projects.scss
+++ b/Styles/SCSS/_projects.scss
@@ -3,10 +3,65 @@
 
 .projects {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
-  overflow: auto;
 
   header {
     @include header-mixin;
     margin: -18px 15px -50px -8px;
+  }
+
+  @media only screen and (min-width: 600px) {
+    width: 1650px;
+    .projects-body-head {
+      padding: 40px 155px;
+
+      h1 {
+        font-size: 50px;
+
+        i {
+          font-size: 38px;
+        }
+      }
+
+      h3 {
+        color: #696969;
+        line-height: 30px;
+        margin: -25px 0;
+      }
+    }
+
+    .personal-website-container {
+      border-color: #1DB954;
+      border-style: solid;
+      background-color: #f7f7f7;
+      margin: 50px 200px;
+      padding-bottom: 107px;
+      padding-top: 5px;
+
+      img {
+        border-color: #000000;
+        border-style: solid;
+        display: inline;
+        float: right;
+        margin: -197px -3px;
+        object-fit: cover;
+      }
+
+      h3 {
+        text-align: center;
+        margin-right: 450px;
+        margin-top: -5px;
+      }
+
+      li {
+        list-style-type: none;
+        h4 {
+          margin: 0 335px;
+        }
+      }
+    }
+  }
+
+  footer {
+    @include footer-mixin;
   }
 }
